correcao da paginacao.

--- a/public/produtos.html
+++ b/public/produtos.html
@@ -8,7 +8,7 @@
 
   <body>
     <div id="paged"></div>
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
     <script>
 const produtos = [
   { nome: "Produto 1", descricao: "descricao", preco: 10.0 },
